# robots-mental-health

./: README.md  fragment.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/chat_task/share/chat_task/: package.sh  package.xml
install/chat_task/share/chat_task/launch/: chat_task.launch.py
log/: latest_build
setupApp/launch/: setupApp.launch.py
src/chat_logic/: setup.cfg  setup.py
src/chat_logic/chat_logic/: planner.py  prompts.py
src/chat_task/: README.md  setup.cfg  setup.py
src/chat_task/chat_task/: task_impl.py
src/chat_task/config/: 00-defaults.yml
src/chat_task/res/ui/: MainPage.qml  (+1 more)
src/chatbot_msgs/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh  setup.zsh
src/llm_bridge/: README.md  setup.cfg  setup.py
src/llm_bridge/config/: 00-defaults.yml
src/llm_bridge/launch/: llm_bridge.launch.py
src/llm_bridge/llm_bridge/: node_impl.py.bak
src/llm_bridge/module/: llm_bridge_module.yaml
src/log/: latest_build
src/mission_controller/: README.md  setup.cfg  setup.py
src/mission_controller/launch/: mission_controller.launch.py
src/mission_controller/locales/: messages.pot
src/mission_controller/mission_controller/: i18n.py  mission_controller.py  run_app.py
src/mission_controller/res/: data.yaml
src/planner_task/: README.md  setup.cfg  setup.py
src/planner_task/planner_task/: task_impl.py
src/task_msgs/: CMakeLists.txt
src/tts_test/: package.xml  setup.cfg  setup.py
src/ui_task/: README.md  setup.cfg  setup.py
src/ui_task/module/: ui_task_module.yaml
src/ui_task/ui_task/: task_impl.py
(+210 files in other folders)
